feat(api): add pricing calculation endpoints and schemas for rates and breakdown

--- a/gateway/app.yaml
+++ b/gateway/app.yaml
@@ -9040,6 +9040,117 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
       x-google-backend: *ref_0
+  /pricing/rates:
+    get:
+      summary: Get pricing rates for a region
+      description: Returns service fee and tax rates for a specific region code
+      tags:
+        - pricing
+      operationId: pricingGetRates
+      security: []
+      parameters:
+        - name: region_code
+          in: query
+          schema:
+            type: string
+            default: US
+          description: ISO country code (e.g., "US", "CA", "GB")
+      responses:
+        '200':
+          description: Pricing rates retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PricingRates'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        default:
+          description: Default error response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      x-google-backend: *ref_0
+  /pricing/calculate:
+    post:
+      summary: Calculate pricing breakdown
+      description: Calculates the full pricing breakdown including service fees and taxes
+      tags:
+        - pricing
+      operationId: pricingCalculateBreakdown
+      security: []
+      requestBody:
+        description: Pricing calculation request
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PricingBreakdownRequest'
+      responses:
+        '200':
+          description: Pricing breakdown calculated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PricingBreakdown'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        default:
+          description: Default error response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      x-google-backend: *ref_0
+    get:
+      summary: Calculate pricing breakdown from URL parameters
+      description: Calculates pricing breakdown using URL query parameters
+      tags:
+        - pricing
+      operationId: pricingCalculateBreakdownFromURL
+      security: []
+      parameters:
+        - name: subtotal
+          in: query
+          required: true
+          schema:
+            type: number
+            format: float
+          description: Base price before fees and taxes
+        - name: region_code
+          in: query
+          schema:
+            type: string
+            default: US
+          description: ISO country code
+      responses:
+        '200':
+          description: Pricing breakdown calculated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PricingBreakdown'
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        default:
+          description: Default error response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+      x-google-backend: *ref_0
   /reviews/heartbeat:
     get:
       summary: Health check endpoint
@@ -14274,6 +14385,20 @@ components:
         notes:
           type: string
           example: Guest arriving late.
+        rejection_message:
+          type: string
+          description: Host's message when rejecting the booking
+          example: This booking doesn't work for my schedule.
+        rejection_reason:
+          type: string
+          description: Host's reason for rejecting the booking
+          enum:
+            - Listing is no longer available
+            - Going on vacation
+            - Traveling for work
+            - Guest is not a good fit
+            - Other
+          example: Going on vacation
         created_at:
           type: string
           format: date-time
@@ -14552,6 +14677,14 @@ components:
             Optional number of guests. If provided, will be stored in draft
             booking.
           example: 2
+        notes:
+          type: string
+          description: >-
+            Optional message from guest to host. If provided, will be stored in
+            draft booking.
+          example: >-
+            Hi, I'm looking forward to staying at your place! I have a couple of
+            questions about parking.
       required:
         - listing_id
     FinalizeBookingRequest:
@@ -14631,6 +14764,80 @@ components:
       required:
         - actor
         - reason
+    PricingRates:
+      type: object
+      description: Pricing rates for a specific region
+      properties:
+        service_fee_rate:
+          type: number
+          format: float
+          description: Service fee rate as decimal (0.10 = 10%)
+          example: 0.1
+        tax_rate:
+          type: number
+          format: float
+          description: Tax rate as decimal (0.08 = 8%)
+          example: 0.08
+      required:
+        - service_fee_rate
+        - tax_rate
+    PricingBreakdownRequest:
+      type: object
+      description: Request for pricing calculation
+      properties:
+        subtotal:
+          type: number
+          format: float
+          description: Base price before fees and taxes
+          example: 100
+        region_code:
+          type: string
+          description: ISO country code for regional pricing
+          default: US
+          example: CA
+      required:
+        - subtotal
+    PricingBreakdown:
+      type: object
+      description: Complete pricing breakdown with fees and taxes
+      properties:
+        subtotal:
+          type: number
+          format: float
+          description: Base price before fees
+          example: 100
+        service_fee:
+          type: number
+          format: float
+          description: Service fee amount
+          example: 10
+        taxes:
+          type: number
+          format: float
+          description: Tax amount
+          example: 8
+        total:
+          type: number
+          format: float
+          description: Total amount including all fees
+          example: 118
+        service_fee_rate:
+          type: number
+          format: float
+          description: Service fee rate used in calculation
+          example: 0.1
+        tax_rate:
+          type: number
+          format: float
+          description: Tax rate used in calculation
+          example: 0.08
+      required:
+        - subtotal
+        - service_fee
+        - taxes
+        - total
+        - service_fee_rate
+        - tax_rate
     PublicReview:
       type: object
       description: Public review information for display (minimal, user-facing)
