--- a/services/listing-service.yaml
+++ b/services/listing-service.yaml
@@ -216,6 +216,21 @@ paths:
                     - city
                     - country
                     - postal_code
+                location:
+                  type: object
+                  description: Optional client-provided location coordinates. If not provided, the backend will geocode the address. If provided and valid, these coordinates take precedence over geocoding.
+                  properties:
+                    latitude:
+                      type: number
+                      format: double
+                      description: Latitude coordinate (WGS84)
+                    longitude:
+                      type: number
+                      format: double
+                      description: Longitude coordinate (WGS84)
+                  required:
+                    - latitude
+                    - longitude
                 baggage_drop:
                   type: boolean
                   description:
