--- a/gateway/app.yaml
+++ b/gateway/app.yaml
@@ -4718,6 +4718,10 @@ paths:
                       rating:
                         type: number
                         format: double
+                      view_count:
+                        type: integer
+                        format: int64
+                        description: Number of times the listing has been viewed
                       instant_book:
                         type: boolean
                       active:
@@ -5021,6 +5025,10 @@ paths:
                         rating:
                           type: number
                           format: double
+                        view_count:
+                          type: integer
+                          format: int64
+                          description: Number of times the listing has been viewed
                         instant_book:
                           type: boolean
                         active:
@@ -6275,6 +6283,10 @@ paths:
                       rating:
                         type: number
                         format: double
+                      view_count:
+                        type: integer
+                        format: int64
+                        description: Number of times the listing has been viewed
                       instant_book:
                         type: boolean
                       active:
@@ -14037,6 +14049,10 @@ components:
         rating:
           type: number
           format: double
+        view_count:
+          type: integer
+          format: int64
+          description: Number of times the listing has been viewed
         instant_book:
           type: boolean
         active:
@@ -14421,6 +14437,23 @@ components:
             - Guest is not a good fit
             - Other
           example: Going on vacation
+        cancelled_by:
+          type: string
+          description: Who cancelled the booking
+          enum:
+            - GUEST
+            - HOST
+            - SYSTEM
+          example: GUEST
+        cancellation_reason:
+          type: string
+          description: Reason for cancellation
+          example: change_of_plans
+        cancelled_at:
+          type: string
+          format: date-time
+          description: When the booking was cancelled
+          example: '2025-09-02T12:00:00Z'
         created_at:
           type: string
           format: date-time
@@ -14451,6 +14484,13 @@ components:
           type: string
           format: date-time
           description: Deadline for submitting reviews
+        cancel_after:
+          type: string
+          format: date-time
+          description: >-
+            Timestamp when pending booking should be auto-cancelled if no host
+            response
+          example: '2025-09-02T14:00:00Z'
       required:
         - id
         - listing
